Fix QIcon::fromTheme(xxx, someFallback) would not return the fallback

because KIconEngine::availableSize always return something even if the icon
is not there

BUG: 342906
REVIEW: 122608